--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -7,22 +7,23 @@
     <div class="page-header">
         <h1>News</h1>
     </div>
-    <div class="container margin-top">
-        {%- paginate blog.articles by 5 -%}
+    <div style="max-width: 65%; margin: auto; margin-top: 50px;">
         {% for post in collections.posts reversed %}
         <article class="post type-post status-publish format-standard">
             <h2><a href="{{ post.url }}">{{ post.data.postTitle }}</a></h2>
-            <span>
-                {% if post.data.author % }
-                {{post.data.author}}
-                {% else %}
-                "Exceptionless"
-                {% endif %}
-            </span>
+            <div style="margin-top: 10px; margin-bottom: 10px;">
+                <span>
+                    {{post.data.author || "Exceptionless"}}
+                </span><br/>
+                <span>
+                    {{post.data.date || ""}}
+                </span>
+            </div>
+            <div style="margin-bottom: 10px;">
+                <a class="btn" href="{{ post.url }}">Read Now</a>
+            </div>
         </article>
         {% endfor %}
-        {{ paginate | default_pagination: next: 'Older', previous: 'Newer' }}
-        {%- endpaginate -%}
     </div>
 </div>
 </body>
