--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -1,31 +1,74 @@
 <!doctype html>
 <html lang="en">
 {% include head.html %}
+
 <body>
-{% include header.html %}
-<div class="margin-top">
-    <div class="page-header">
-        <h1>News</h1>
+    {% include header.html %}
+    <div class="margin-top">
+        <div class="page-header">
+            <h1>News</h1>
+        </div>
+        <div style="max-width: 65%; margin: auto; margin-top: 50px; margin-bottom: 450px;">
+            {% for post in pagination.items %}
+            <article class="post type-post status-publish format-standard">
+                <h2><a href="{{ post.url }}">{{ post.data.postTitle }}</a></h2>
+                <div style="margin-top: 10px; margin-bottom: 10px;">
+                    <span>
+                        {{post.data.author || "Exceptionless"}}
+                    </span><br />
+                    <span>
+                        {{post.data.date || ""}}
+                    </span>
+                </div>
+                <div style="margin-bottom: 10px;">
+                    <a class="btn" href="{{ post.url }}">Read Now</a>
+                </div>
+            </article>
+            {% endfor %}
+            {% if pagination.pageLinks.length > 1 %}
+            <nav class="post-nav">
+                <ul class="pager">
+                {% if pagination.previousPageLink %}
+                <li class="next"><a href="{{ pagination.previousPageHref | url }}">Newer Articles</a></li>
+                {% else %}
+                <li class="next"><span>Newer Articles</span></li>
+                {% endif %}
+
+                {% if pagination.nextPageLink %}
+                <li class="previous">
+                    <a  href="{{ pagination.nextPageHref | url }}">Older Articles</a>
+                </li>
+                
+                {% else %}
+                <li class="previous"><span class="previous">Older Articles</span></li>
+                
+                {% endif %}
+                </ul>
+            </nav>
+            {% endif %}
+        </div>
+
     </div>
-    <div style="max-width: 65%; margin: auto; margin-top: 50px;">
-        {% for post in collections.posts reversed %}
-        <article class="post type-post status-publish format-standard">
-            <h2><a href="{{ post.url }}">{{ post.data.postTitle }}</a></h2>
-            <div style="margin-top: 10px; margin-bottom: 10px;">
-                <span>
-                    {{post.data.author || "Exceptionless"}}
-                </span><br/>
-                <span>
-                    {{post.data.date || ""}}
-                </span>
-            </div>
-            <div style="margin-bottom: 10px;">
-                <a class="btn" href="{{ post.url }}">Read Now</a>
-            </div>
-        </article>
-        {% endfor %}
-    </div>
-</div>
-{% include footer.html %}
+    {% include footer.html %}
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/cyclone-slider-pro/jquery.easing.1.3.js" id="jquery-easing-js"></script>
+    <script type="text/javascript" src="/cyclone-slider-pro/libs/cycle2/jquery.cycle2.min.js"
+        id="jquery-cycle2-js"></script>
+    <script type="text/javascript" src="/cyclone-slider-pro/libs/cycle2/jquery.cycle2.swipe.min.js"
+        id="jquery-cycle2-swipe-js"></script>
+    <script type="text/javascript" src="/cyclone-slider-pro/templates/standard/script.js"
+        id="cyclone-template-script-standard-js"></script>
+    <script type="text/javascript" src="/cyclone-slider-pro/js/client.js" id="cyclone-client-js"></script>
+    <script type="text/javascript" id="wpgdprc.js-js-extra">
+        /* <![CDATA[ */
+        var wpgdprcData = { "ajaxURL": "https:\/\/exceptionless.com\/wp-admin\/admin-ajax.php", "ajaxSecurity": "a1abf979ec", "isMultisite": "", "path": "\/", "blogId": "" };
+    /* ]]> */
+    </script>
+    <script type="text/javascript" src="/wp-includes/js/underscore.min.js" id="underscore-js"></script>
+    <script type="text/javascript" src="/wp-includes/js/backbone.min.js" id="backbone-js"></script>
+    <script type="text/javascript" src="https://s1.wp.com/wp-content/js/mustache.js" id="mustache-js"></script>
+
 </body>
+
 </html>
