--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -15,8 +15,8 @@
                 <div style="margin-top: 10px; margin-bottom: 10px;">
                     <span>
                         {{post.data.author || "Exceptionless"}}
-                    </span><br />  
-                    <hr />                  
+                    </span><br />
+                    <hr />
                 </div>
                 {{ post.data.content }}
             </article>
@@ -34,10 +34,10 @@
                 <li class="previous">
                     <a  href="{{ pagination.nextPageHref | url }}">Older Articles</a>
                 </li>
-                
+
                 {% else %}
                 <li class="previous"><span class="previous">Older Articles</span></li>
-                
+
                 {% endif %}
                 </ul>
             </nav>
@@ -46,20 +46,7 @@
 
     </div>
     {% include footer.html %}
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/assets/cyclone-slider-pro/jquery.easing.1.3.js" id="jquery-easing-js"></script>
-    <script type="text/javascript" src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.min.js"
-        id="jquery-cycle2-js"></script>
-    <script type="text/javascript" src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.swipe.min.js"
-        id="jquery-cycle2-swipe-js"></script>
-    <script type="text/javascript" src="/assets/cyclone-slider-pro/templates/standard/script.js"
-        id="cyclone-template-script-standard-js"></script>
-    <script type="text/javascript" src="/assets/cyclone-slider-pro/js/client.js" id="cyclone-client-js"></script>
-    <script type="text/javascript" src="/assets/js/underscore.min.js" id="underscore-js"></script>
-    <script type="text/javascript" src="/assets/js/backbone.min.js" id="backbone-js"></script>
-    <script type="text/javascript" src="https://s1.wp.com/wp-content/js/mustache.js" id="mustache-js"></script>
-
+    {% include scripts.html %}
 </body>
 
 </html>
