--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -19,7 +19,7 @@
 <!--                    away in frustration</h2>-->
 <!--                    <p style="visibility: hidden;">Discover errors in your app you never knew were happening and use-->
 <!--                        detailed error reports to squash them with ease. Make your app Exceptionless!</p><a-->
-<!--                            href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&amp;type=organic"-->
+<!--                            href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic"-->
 <!--                            class="btn btn-large btn-primary" style="visibility: hidden;">Sign up for FREE!</a></div>-->
 <!--                <div style="clear: both; visibility: hidden;"></div>-->
 <!--            </div>-->
@@ -31,7 +31,7 @@
                 <div class="span6"><h2>Don't let your users walk away in frustration</h2>
                     <p>Discover errors in your app you never knew were happening and use detailed error reports to
                         squash them with ease. Make your app Exceptionless!</p><a
-                            href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&amp;type=organic"
+                            href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic"
                             class="btn btn-large btn-primary">Sign up for FREE!</a></div>
                 <div style="clear:both;"></div>
             </div>
