--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                     <li class="menu-help"><a href="https://github.com/exceptionless/Exceptionless/wiki">Help</a></li>
                     <li class="menu-contact"><a href="/contact/">Contact</a></li>
                     <li class="menu-log-in"><a href="https://be.exceptionless.io">Log In</a></li>
-                    <li class="menu-sign-up"><a href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&amp;type=organic">Sign Up</a></li>
+                    <li class="menu-sign-up"><a href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic">Sign Up</a></li>
                 </ul>      </nav>
         </div>
     </div>
