--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,17 +5,23 @@
 </script>
 
 <script>
-// We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/6c0d76e0bec950052459f5cb4b727a949aeabbe1'
-(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/6c0d76e0bec950052459f5cb4b727a949aeabbe1';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+// We pre-filled your app ID in the widget URL: '//widget.intercom.io/widget/6c0d76e0bec950052459f5cb4b727a949aeabbe1'
+(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='//widget.intercom.io/widget/6c0d76e0bec950052459f5cb4b727a949aeabbe1';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
 </script>
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/cyclone-slider-pro/jquery.easing.1.3.js" id="jquery-easing-js"></script>
-<script type="text/javascript" src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.min.js" id="jquery-cycle2-js"></script>
-<script type="text/javascript" src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.swipe.min.js" id="jquery-cycle2-swipe-js"></script>
-<script type="text/javascript" src="/assets/cyclone-slider-pro/templates/standard/script.js" id="cyclone-template-script-standard-js"></script>
-<script type="text/javascript" src="/assets/cyclone-slider-pro/js/client.js" id="cyclone-client-js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.11.0/underscore.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/backbone@1.4.0/backbone.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mustache@4.0.1/mustache.min.js"></script>
+
+<script defer src="//www.google-analytics.com/analytics.js"></script>
+<script defer src="//www.googletagmanager.com/gtm.js?id=GTM-PV8Q8J"></script>
+<script defer src="//connect.facebook.net/signals/config/722987251177335?v=2.9.27&r=stable"></script>
+<script defer src="//connect.facebook.net/en_US/fbevents.js"></script>
+<script defer src="//cdn.jsdelivr.net/npm/jquery@1.9.1/dist/jquery.min.js"></script>
+<script defer src="/assets/cyclone-slider-pro/jquery.easing.1.3.js" id="jquery-easing-js"></script>
+<script defer src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.min.js" id="jquery-cycle2-js"></script>
+<script defer src="/assets/cyclone-slider-pro/libs/cycle2/jquery.cycle2.swipe.min.js" id="jquery-cycle2-swipe-js"></script>
+<script defer src="/assets/cyclone-slider-pro/templates/standard/script.js" id="cyclone-template-script-standard-js"></script>
+<script defer src="/assets/cyclone-slider-pro/js/client.js" id="cyclone-client-js"></script>
+<script defer src="//cdn.jsdelivr.net/npm/underscore@1.11.0/underscore.min.js"></script>
+<script defer src="//cdn.jsdelivr.net/npm/backbone@1.4.0/backbone.min.js"></script>
+<script defer src="//cdn.jsdelivr.net/npm/mustache@4.0.1/mustache.min.js"></script>
+<script defer src="/assets/js/main.js"></script>
 <script type="text/javascript"> jQuery(document).bind('gform_post_render', function(event, formId, currentPage){if(formId == 1) {jQuery('#input_1_2').mask('(999) 999-9999').bind('keypress', function(e){if(e.which == 13){jQuery(this).blur();} } );} } );jQuery(document).bind('gform_post_conditional_logic', function(event, formId, fields, isInit){} );</script><script type="text/javascript"> jQuery(document).ready(function(){jQuery(document).trigger('gform_post_render', [1, 1]) } ); </script>
