--- a/content/_layouts/content-well.njk
+++ b/content/_layouts/content-well.njk
@@ -8,8 +8,11 @@ layout: default
 
 <div id="wrap" class="container" role="document">
   <div id="content" class="row-fluid">
+    <div id="main" class="span12" role="main">
+      <div class="well">
 
-    {{ content | safe }}
-
+        {{ content | safe }}
+      </div>
+    </div>
   </div>
 </div>
