Working on news

--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ metadata.title }}</title>
+    <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
-    <meta name="description" content="{{ metadata.description }}">
+    <meta name="description" content="{{ description }}">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <link rel="canonical" href="/">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ metadata.title }}">
-    <meta property="og:description" content="{{ metadata.description }}">
+    <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="{{ description }}">
     <meta property="og:url" content="/">
     <meta property="og:site_name" content="Exceptionless">
     <meta property="article:modified_time" content="2017-04-07T18:29:45+00:00">
