--- a/content/_layouts/post.njk
+++ b/content/_layouts/post.njk
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="page-header margin-top">
-  <h1>Post</h1>
+  <h1>News</h1>
 </div>
 
 <div id="wrap" class="container" role="document">
