More image cleanup

--- a/content/_includes/carousel.html
+++ b/content/_includes/carousel.html
@@ -13,7 +13,7 @@
 <!--                 style="position: static; top: 0px; left: 0px; z-index: 120; opacity: 1; visibility: hidden; display: block;">-->
 <!--                <div class="span6" style="visibility: hidden;">-->
 <!--                    <div class="thumb thumb-left" style="visibility: hidden;"><img-->
-<!--                            src="/assets/dashboard-2-1024x594.png" style="visibility: hidden;"></div>-->
+<!--                            src="/assets/img/dashboard-2-1024x594.png" style="visibility: hidden;"></div>-->
 <!--                </div>-->
 <!--                <div class="span6" style="visibility: hidden;"><h2 style="visibility: hidden;">Don't let your users walk-->
 <!--                    away in frustration</h2>-->
@@ -26,7 +26,7 @@
             <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide"
                  style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: none;">
                 <div class="span6">
-                    <div class="thumb thumb-left"><img src="/assets/dashboard-2-1024x594.png"></div>
+                    <div class="thumb thumb-left"><img src="/assets/img/dashboard-2-1024x594.png"></div>
                 </div>
                 <div class="span6"><h2>Don't let your users walk away in frustration</h2>
                     <p>Discover errors in your app you never knew were happening and use detailed error reports to
@@ -49,7 +49,7 @@
             <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide"
                  style="position: absolute; top: 0px; left: 0px; z-index: 97; display: none; opacity: 0;">
                 <div class="span6">
-                    <div class="thumb thumb-left"><img src="/assets/logs-2.jpg"></div>
+                    <div class="thumb thumb-left"><img src="/assets/img/logs-2.jpg"></div>
                 </div>
                 <div class="span6"><h2>Report Logs, Feature Usages, and more!</h2>
                     <p>You can send any type of event to your Exceptionless dashboard. Create tags for organization, and
