--- a/content/_includes/carousel.html
+++ b/content/_includes/carousel.html
@@ -1,4 +1,4 @@
-<div id="sliderRow" style="padding-top: 150px; padding-bottom: 50px; background: #F1F1F1;">
+<div id="sliderRow">
     <div class="cycloneslider cycloneslider-template-standard cycloneslider-width-responsive" id="cycloneslider-20-1"
          style="max-width: 100%;">
         <div class="cycloneslider-slides cycle-slideshow" data-cycle-allow-wrap="true" data-cycle-dynamic-height="off"
