--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -97,6 +97,7 @@
                         <li><a href="/privacy/">Privacy Policy</a></li>
                     </ul></div>
                 </div></section></div>
+                <div class="span3"></div>
                 <div class="span4"><section id="text-3" class="widget-1 widget-first widget widget_text"><div class="widget-inner">			<div class="textwidget"><h3><span class="slash">//</span> Stay In Touch</h3>
                     <p>There are real people behind Exceptionless, so if you have a question or suggestion (no matter how small) please get in touch with us:</p>
 
