Get the slider working

--- a/content/_includes/carousel.html
+++ b/content/_includes/carousel.html
@@ -23,8 +23,7 @@
 <!--                            class="btn btn-large btn-primary" style="visibility: hidden;">Sign up for FREE!</a></div>-->
 <!--                <div style="clear: both; visibility: hidden;"></div>-->
 <!--            </div>-->
-            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide"
-                 style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: none;">
+            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide">
                 <div class="span6">
                     <div class="thumb thumb-left"><img src="/assets/img/dashboard-2-1024x594.png"></div>
                 </div>
@@ -35,19 +34,17 @@
                             class="btn btn-large btn-primary">Sign up for FREE!</a></div>
                 <div style="clear:both;"></div>
             </div>
-            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide cycle-slide-active"
-                 style="position: absolute; top: 0px; left: 0px; z-index: 119; display: block; opacity: 1;">
+            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide cycle-slide-active">
                 <div class="span6"><h2>Exceptionless makes error reporting a breeze</h2>
                     <p>Simply install the client and begin collecting unhandled exceptions right away. Use our fluent
                         API to send additional details about critical errors and be notified immediately.</p><a
                             href="tour/" class="btn btn-large btn-primary">Take the Tour</a></div>
                 <div class="span6">
-                    <div class="thumb thumb-right"><img src="assets/toexceptionless.png"></div>
+                    <div class="thumb thumb-right"><img src="/assets/img/toexceptionless.png"></div>
                 </div>
                 <div style="clear:both;"></div>
             </div>
-            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide"
-                 style="position: absolute; top: 0px; left: 0px; z-index: 97; display: none; opacity: 0;">
+            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide">
                 <div class="span6">
                     <div class="thumb thumb-left"><img src="/assets/img/logs-2.jpg"></div>
                 </div>
@@ -58,19 +55,18 @@
                         FREE!</a></div>
                 <div style="clear:both;"></div>
             </div>
-            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide"
-                 style="position: absolute; top: 0px; left: 0px; z-index: 96; display: none; opacity: 0;">
+            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide">
                 <div class="span6"><h2>Fork Us! Exceptionless is Open Source</h2>
                     <p>Join the community and help us make the software world a better place. Collaborate, give
                         feedback, report bugs, and host Exceptionless yourself - for free.</p><a
                             href="https://github.com/exceptionless/Exceptionless" target="_blank"
                             class="btn btn-large btn-primary">Fork Us on GitHub!</a></div>
                 <div class="span6">
-                    <div class="thumb thumb-right"><img src="assets/slider-github.jpg"></div>
+                    <div class="thumb thumb-right"><img src="/assets/img/slider-github.jpg"></div>
                 </div>
                 <div style="clear:both;"></div>
             </div>
         </div>
-        <a href="#" class="cycloneslider-prev" style="top: 250px;"> <span></span> </a> <a href="#" class="cycloneslider-next" style="top: 250px;"> <span></span>
+        <a href="#" class="cycloneslider-prev"> <span></span> </a> <a href="#" class="cycloneslider-next"> <span></span>
     </a></div>
 </div>
