--- a/content/feed.njk
+++ b/content/feed.njk
@@ -9,7 +9,7 @@ metadata:
   feedUrl: "https://exceptionless.com/feed"
   author:
     name: Exceptionless
-    email: contact@exceptionless.com
+    email: team@exceptionless.com
 ---
 
 <?xml version="1.0" encoding="utf-8"?>
