Fixing some responsive layout issues

--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -45,7 +45,7 @@
 
     <link rel="stylesheet" href="/assets/css/custom.css">
   </head>
-  <body>
+  <body class="home page custom-background top-navbar">
     <header id="banner" class="topnavbar navbar navbar-fixed-top" role="banner">
         <div class="navbar-inner">
             <div class="container">
