Still more cleanup

--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@exceptionless">
     <script type="application/ld+json" class="yoast-schema-graph">{"@context":"https://schema.org","@graph":[{"@type":"WebSite","@id":"/#website","url":"/","name":"Exceptionless","description":"","potentialAction":[{"@type":"SearchAction","target":"/?s={search_term_string}","query-input":"required name=search_term_string"}],"inLanguage":"en-US"},{"@type":"ImageObject","@id":"/#primaryimage","inLanguage":"en-US","url":"/assets/img/codesmith-client-logo-bar-left.png"},{"@type":"WebPage","@id":"/#webpage","url":"/","name":"Exceptionless Exception and Event Reporting in real-time","isPartOf":{"@id":"/#website"},"primaryImageOfPage":{"@id":"/#primaryimage"},"datePublished":"2013-09-27T02:37:44+00:00","dateModified":"2017-04-07T18:29:45+00:00","description":"Real-time exception reporting for ASP.NET, Web API, WebForms, WPF, Console, and MVC applications. Includes event organization, notifications, and more.","inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["/"]}]}]}</script>
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- google tag manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-433340-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -31,19 +31,16 @@
 
     gtag('config', 'UA-433340-1');
     </script>
+    <!-- end google tag manager -->
 
-    <link rel="dns-prefetch" href="//secure.gravatar.com">
-    <link rel="dns-prefetch" href="//ajax.googleapis.com">
-    <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
     <link rel="stylesheet" href="/assets/cyclone-slider-pro/templates/standard/style.css">
     <link rel="stylesheet" href="/assets/css/theme.css">
     <link rel="stylesheet" href="/assets/css/responsive.css">
 
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:&amp;subset=" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,300,400,600" rel="stylesheet">
 
     <link rel="alternate" type="application/rss+xml" title="Exceptionless Feed" href="/feed.xml">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,300,400,600" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico">
 
     <script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -126,6 +123,7 @@
 
     <script src="/assets/js/main.js"></script>
 
+    <!-- intercom -->
     <script>
     window.intercomSettings = {
         app_id: "6c0d76e0bec950052459f5cb4b727a949aeabbe1"
@@ -135,5 +133,6 @@
     <script>
     (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/6c0d76e0bec950052459f5cb4b727a949aeabbe1';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
     </script>
+    <!-- end intercom -->
   </body>
 </html>
