--- a/content/_includes/carousel.html
+++ b/content/_includes/carousel.html
@@ -1,6 +1,5 @@
 <div id="sliderRow">
-    <div class="cycloneslider cycloneslider-template-standard cycloneslider-width-responsive" id="cycloneslider-20-1"
-         style="max-width: 100%;">
+    <div class="cycloneslider cycloneslider-template-standard cycloneslider-width-responsive" id="cycloneslider-20-1" style="max-width: 100%;">
         <div class="cycloneslider-slides cycle-slideshow" data-cycle-allow-wrap="true" data-cycle-dynamic-height="off"
              data-cycle-auto-height="0" data-cycle-auto-height-easing="null" data-cycle-auto-height-speed="250"
              data-cycle-delay="0" data-cycle-easing="" data-cycle-fx="fade" data-cycle-hide-non-active="true"
@@ -9,28 +8,14 @@
              data-cycle-prev="#cycloneslider-20-1 .cycloneslider-prev" data-cycle-slides="> div" data-cycle-speed="1000"
              data-cycle-swipe="true" data-cycle-tile-count="7" data-cycle-tile-delay="100"
              data-cycle-tile-vertical="true" data-cycle-timeout="10000">
-<!--            <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide cycle-sentinel"-->
-<!--                 style="position: static; top: 0px; left: 0px; z-index: 120; opacity: 1; visibility: hidden; display: block;">-->
-<!--                <div class="span6" style="visibility: hidden;">-->
-<!--                    <div class="thumb thumb-left" style="visibility: hidden;"><img-->
-<!--                            src="/assets/img/dashboard-2-1024x594.png" style="visibility: hidden;"></div>-->
-<!--                </div>-->
-<!--                <div class="span6" style="visibility: hidden;"><h2 style="visibility: hidden;">Don't let your users walk-->
-<!--                    away in frustration</h2>-->
-<!--                    <p style="visibility: hidden;">Discover errors in your app you never knew were happening and use-->
-<!--                        detailed error reports to squash them with ease. Make your app Exceptionless!</p><a-->
-<!--                            href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic"-->
-<!--                            class="btn btn-large btn-primary" style="visibility: hidden;">Sign up for FREE!</a></div>-->
-<!--                <div style="clear: both; visibility: hidden;"></div>-->
-<!--            </div>-->
             <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide">
                 <div class="span6">
-                    <div class="thumb thumb-left"><img src="/assets/img/dashboard-2-1024x594.png"></div>
+                    <div class="thumb thumb-left"><img src="/assets/img/dashboard-2-1024x594.png" alt="Exceptionless Dashboard"></div>
                 </div>
                 <div class="span6"><h2>Don't let your users walk away in frustration</h2>
                     <p>Discover errors in your app you never knew were happening and use detailed error reports to
                         squash them with ease. Make your app Exceptionless!</p><a
-                            href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic"
+                            href="https://be.exceptionless.io/signup?domain=exceptionless.com&amp;type=organic"
                             class="btn btn-large btn-primary">Sign up for FREE!</a></div>
                 <div style="clear:both;"></div>
             </div>
@@ -40,13 +25,13 @@
                         API to send additional details about critical errors and be notified immediately.</p><a
                             href="tour/" class="btn btn-large btn-primary">Take the Tour</a></div>
                 <div class="span6">
-                    <div class="thumb thumb-right"><img src="/assets/img/toexceptionless.png"></div>
+                    <div class="thumb thumb-right"><img src="/assets/img/toexceptionless.png" alt="Exceptionless submission code sample"></div>
                 </div>
                 <div style="clear:both;"></div>
             </div>
             <div class="cycloneslider-slide cycloneslider-slide-custom cycle-slide">
                 <div class="span6">
-                    <div class="thumb thumb-left"><img src="/assets/img/logs-2.jpg"></div>
+                    <div class="thumb thumb-left"><img src="/assets/img/logs-2.jpg" alt="Exceptionless logs tracking"></div>
                 </div>
                 <div class="span6"><h2>Report Logs, Feature Usages, and more!</h2>
                     <p>You can send any type of event to your Exceptionless dashboard. Create tags for organization, and
@@ -62,7 +47,7 @@
                             href="https://github.com/exceptionless/Exceptionless" target="_blank"
                             class="btn btn-large btn-primary">Fork Us on GitHub!</a></div>
                 <div class="span6">
-                    <div class="thumb thumb-right"><img src="/assets/img/slider-github.jpg"></div>
+                    <div class="thumb thumb-right"><img src="/assets/img/slider-github.jpg" alt="Exceptionless on GitHub"></div>
                 </div>
                 <div style="clear:both;"></div>
             </div>
