--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -2,25 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-
-    <meta name="description" content="{{ description }}">
-    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel="canonical" href="/">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ title }}">
-    <meta property="og:description" content="{{ description }}">
-    <meta property="og:url" content="/">
-    <meta property="og:site_name" content="Exceptionless">
-    <meta property="article:modified_time" content="2017-04-07T18:29:45+00:00">
-    <meta property="og:image" content="/assets/img/codesmith-client-logo-bar-left.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@exceptionless">
-    <meta name="twitter:site" content="@exceptionless">
-    <script type="application/ld+json" class="yoast-schema-graph">{"@context":"https://schema.org","@graph":[{"@type":"WebSite","@id":"/#website","url":"/","name":"Exceptionless","description":"","potentialAction":[{"@type":"SearchAction","target":"/?s={search_term_string}","query-input":"required name=search_term_string"}],"inLanguage":"en-US"},{"@type":"ImageObject","@id":"/#primaryimage","inLanguage":"en-US","url":"/assets/img/codesmith-client-logo-bar-left.png"},{"@type":"WebPage","@id":"/#webpage","url":"/","name":"Exceptionless Exception and Event Reporting in real-time","isPartOf":{"@id":"/#website"},"primaryImageOfPage":{"@id":"/#primaryimage"},"datePublished":"2013-09-27T02:37:44+00:00","dateModified":"2017-04-07T18:29:45+00:00","description":"Real-time exception reporting for ASP.NET, Web API, WebForms, WPF, Console, and MVC applications. Includes event organization, notifications, and more.","inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["/"]}]}]}</script>
+    {% seo "" %}
     
     <!-- google tag manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-433340-1"></script>
