--- a/content/feed.njk
+++ b/content/feed.njk
@@ -6,12 +6,11 @@ metadata:
   title: "Exceptionless Blog"
   subtitle: "All things Exceptionless, exceptions, stacks, and code."
   url: "https://exceptionless.com/news"
-  feedUrl: "https://exceptionless.com/feed"
+  feedUrl: "https://exceptionless.com/feed.xml"
   author:
     name: Exceptionless
     email: team@exceptionless.com
 ---
-
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <title>{{ metadata.title }}</title>
