--- a/content/feed.njk
+++ b/content/feed.njk
@@ -21,7 +21,7 @@ layout:
     <title>{{ post.data.title }}</title>
     <link href="{{ absolutePostUrl }}"/>
     <updated>{{ post.date | rssDate }}</updated>
-    <id>{{ absolutePostUrl }}</id>
+    <id>{{ post.data.id if post.data.id else absolutePostUrl }}</id>
     <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
   {%- endfor %}
