--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -24,6 +24,31 @@ body, input, button, select, textarea, .search-query {font-family: Open Sans;}
 	margin-top: 20px;
 }
 
+#docs-nav {
+    position: fixed;
+    left: 10px;
+    width: 25%;
+    padding-left: 20px;
+    margin-bottom: 200px;
+    z-index: 1024;
+    top:140px;
+    bottom: 0;
+    overflow-y: scroll;
+    margin-bottom: 200px;
+}
+
+#docs-nav ul li {
+    list-style-type: none;
+    padding: 20px;
+    font-size: 16px;
+}
+
+#main-docs {
+    width: 72%;
+    margin-right: 1.5%;
+    margin-left: 26.5%;
+}
+
 @media (min-width: 768px) {
     .row-fluid .span6.smaller {
         width: 46% !important;
