client docs pulled over and nav bar updated

--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -49,7 +49,7 @@
                         <li class="menu-why"><a href="/why/">Why?</a></li>
                         <li class="menu-pricing"><a href="/pricing/">Pricing</a></li>
                         <li class="menu-news"><a href="/news/">News</a></li>
-                        <li class="menu-help"><a href="https://github.com/exceptionless/Exceptionless/wiki">Help</a></li>
+                        <li class="menu-help"><a href="/documentation/">Documentation</a></li>
                         <li class="menu-log-in"><a href="https://be.exceptionless.io">Log In</a></li>
                         <li class="menu-sign-up"><a href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic">Sign Up</a></li>
                     </ul>
