--- a/content/_layouts/docs.njk
+++ b/content/_layouts/docs.njk
@@ -11,7 +11,8 @@ layout: default
     <div class="toc well span3">
       {% include "docs-toc.html" %}
     </div>
-    <div class="well span9">
+    <div class="well span9 docs">
+      <h1>{{ title }}</h1>
       {{ content | safe }}
     </div>
   </div>
