--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -103,6 +103,10 @@ body, input, button, select, textarea, .search-query {font-family: Open Sans;}
     padding: .15em .25em;
 }
 
+.toc .toc-active {
+    background-color: #f1f1f1;
+}
+
 .docs > h1:first-child {
     border-bottom: 1px solid #ddd;
     margin-top: 0;
