Some footer updates

--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -73,7 +73,7 @@
                         <li><a href="/why/">Why?</a></li>
                         <li><a href="/pricing/">Pricing</a></li>
                         <li><a href="/news/">News</a></li>
-                        <li><a href="https://github.com/exceptionless/Exceptionless/wiki">Help</a></li>
+                        <li><a href="https://github.com/exceptionless/Exceptionless/wiki">Docs</a></li>
                     </ul>
                     <ul class="footer-links clearfix">
                         <li><a href="javascript:Intercom('showNewMessage');">Contact</a></li>
@@ -81,6 +81,7 @@
                         <li><a href="/about/">About Us</a></li>
                         <li><a href="/terms/">Terms of Use</a></li>
                         <li><a href="/privacy/">Privacy Policy</a></li>
+                        <li>&nbsp;</li>
                     </ul></div>
                 </div></section></div>
                 <div class="span3"></div>
