--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -128,6 +128,30 @@ a.deeplink:hover {
     margin-bottom: 20px;
 }
 
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+#content .alert-danger a.alert-link {
+    color: #721c24 !important;
+}
+
+.alert-info {
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+    color: #3a87ad;
+}
+
+#content .alert-info a.alert-link {
+    color: #3a87ad !important;
+}
+
+.alert p:last-child {
+    margin-bottom: 0px;
+}
+
 @media (min-width: 768px) {
     .row-fluid .span6.smaller {
         width: 46% !important;
