--- a/content/feed.njk
+++ b/content/feed.njk
@@ -15,7 +15,8 @@ layout:
     <name>{{ site.author }}</name>
     <email>team@exceptionless.com</email>
   </author>
-  {%- for post in collections.posts %}
+  {%- for post in collections.posts | reverse %}
+  {% if post.data.draft != true %}
   {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
   <entry>
     <title>{{ post.data.title }}</title>
@@ -24,5 +25,6 @@ layout:
     <id>{{ post.data.id if post.data.id else absolutePostUrl }}</id>
     <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
+  {% endif %}
   {%- endfor %}
 </feed>
