--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -156,6 +156,11 @@ a.deeplink:hover {
     margin-bottom: 0px;
 }
 
+.entry-content p {
+    font-size: 16px;
+    line-height: 2em;
+}
+
 @media (min-width: 768px) {
     .row-fluid .span6.smaller {
         width: 46% !important;
