Make the docs live on the site. Seems like it's better than the wiki already.

--- a/content/_layouts/default.njk
+++ b/content/_layouts/default.njk
@@ -49,7 +49,7 @@
                         <li class="menu-why"><a href="/why/">Why?</a></li>
                         <li class="menu-pricing"><a href="/pricing/">Pricing</a></li>
                         <li class="menu-news"><a href="/news/">News</a></li>
-                        <li class="menu-help"><a href="https://github.com/exceptionless/Exceptionless/wiki">Docs</a></li>
+                        <li class="menu-help"><a href="/docs/">Docs</a></li>
                         <li class="menu-log-in"><a href="https://be.exceptionless.io">Log In</a></li>
                         <li class="menu-sign-up"><a href="https://be.exceptionless.io/signup?domain=www.codesmithtools.com&type=organic">Sign Up</a></li>
                     </ul>
@@ -73,7 +73,7 @@
                         <li><a href="/why/">Why?</a></li>
                         <li><a href="/pricing/">Pricing</a></li>
                         <li><a href="/news/">News</a></li>
-                        <li><a href="https://github.com/exceptionless/Exceptionless/wiki">Docs</a></li>
+                        <li><a href="/docs/">Docs</a></li>
                     </ul>
                     <ul class="footer-links clearfix">
                         <li><a href="javascript:Intercom('showNewMessage');">Contact</a></li>
