--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -156,8 +156,14 @@ a.deeplink:hover {
     margin-bottom: 0px;
 }
 
-.entry-content p {
+.entry-content p, .docs p {
     font-size: 16px;
+    line-height: 2em;
+}
+
+.docs ol li, .docs ul li {
+    font-size: 14px;
+    margin-left: 5px;
     line-height: 2em;
 }
 
